--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,6 +1,9 @@
 $primary-color: green;
 
 header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     background: burlywood;
 }
 
