--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,5 +1,3 @@
-$primary-color: green;
-
 header {
     display: flex;
     justify-content: space-between;
@@ -7,6 +5,32 @@ header {
     background: burlywood;
 }
 
-.title {
-    color: $primary-color;
+.logo {
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+
+    & * {
+        pointer-events: none;
+    }
+
+    @keyframes sway {
+        20% { transform: rotate(-15deg); } 
+        40% { transform: rotate(15deg); } 
+        60% { transform: rotate(-15deg); }
+        80% { transform: rotate(15deg); }
+        100% { transform: rotate(0deg); }
+    }
+
+    &:hover svg {
+        animation: sway 0.5s;
+    }
+
+    svg {
+        width: 35px;
+    }
+
+    h1 {
+        font-size: 1.5rem;
+    }
 }
