--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,8 +1,13 @@
-header {
+.header {
     display: flex;
     justify-content: space-between;
     align-items: center;
     background: burlywood;
+}
+
+.anchor {
+    text-decoration: none;
+    color: inherit;
 }
 
 .logo {
