--- a/src/components/Hero/Hero.module.scss
+++ b/src/components/Hero/Hero.module.scss
@@ -21,12 +21,33 @@
         }
     }
 
+    .carouselIndicators {
+        position: absolute;
+        bottom: 1rem;
+        left: 50%;
+        transform: translateX(-50%);
+        z-index: 3;
+        
+        button {
+            margin-right: 0.7rem;
+            width: 15px;
+            height: 15px;
+            background: none;
+            border: none;
+            transition: width 0.3s ease-out;
+            cursor: pointer;
+
+            &[data-active] {
+                width: 22px;
+            }
+        }
+    }
+
     .carouselContainer {
         display: flex;
         position: relative;
         transition: transform 0.3s ease;
         height: 300px;
-        // transform: translateX(0);
 
         .categoryHighlight {
             background-size: cover;
@@ -48,12 +69,22 @@
             &[data-highlight="2"] { background-image: url("../../../images/hero-2.webp"); }
             &[data-highlight="3"] { background-image: url("../../../images/hero-3.webp"); }
 
-            .bookImage {
-                width: 90px;
-                height: 150px;
+            .bookLink {
+                display: block;
                 border: 1px solid #ffffffda;
                 grid-column: 1 / 2;
                 grid-row: 1 / 4;
+
+                .bookContainer {
+                    width: 120px;
+                    height: 180px;
+    
+                    img {
+                        width: 100%;
+                        height: 100%;
+                        object-fit: cover;
+                    }
+                }
             }
     
             button {
