--- a/src/components/Hero/Hero.module.scss
+++ b/src/components/Hero/Hero.module.scss
@@ -76,21 +76,20 @@
             &[data-highlight="2"] { background-image: url("../../../images/hero-2.webp"); }
             &[data-highlight="3"] { background-image: url("../../../images/hero-3.webp"); }
 
-            .bookLink {
-                display: block;
+            .bookContainer {
+                width: 120px;
+                height: 180px;
                 border: 1px solid #ffffffda;
                 grid-column: 1 / 2;
                 grid-row: 1 / 4;
+                display: flex;
+                justify-content: center;
+                align-items: center;
 
-                .bookContainer {
-                    width: 120px;
-                    height: 180px;
-    
-                    img {
-                        width: 100%;
-                        height: 100%;
-                        object-fit: cover;
-                    }
+                img {
+                    width: 100%;
+                    height: 100%;
+                    object-fit: cover;
                 }
             }
     
