--- a/src/components/Book/Book.module.scss
+++ b/src/components/Book/Book.module.scss
@@ -1,16 +1,41 @@
-.bookContainer {
+%bookHeroContainer {
     width: 120px;
     height: 180px;
-    border: 1px solid #ffffffda;
     grid-column: 1 / 2;
     grid-row: 1 / 4;
+}
+
+.bookHeroResolved {
+    @extend %bookHeroContainer;
+
+    a {
+        img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+    }
+}
+
+.bookLoading {
+    @keyframes rotate {
+        to {
+            transform: rotate(360deg)
+        }
+    }
+
+    @extend %bookHeroContainer;
+    border: 1px solid #fff;
     display: flex;
     justify-content: center;
     align-items: center;
 
-    img {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
+    svg {
+        width: 50px;
+        animation: rotate 0.7s infinite linear;
     }
+}
+
+.bookError {
+    @extend %bookHeroContainer;
 }
