implement scroll-aware header

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -4,7 +4,17 @@
     align-items: center;
     background: burlywood;
     height: 3.5rem;
+    min-width: 100%;
     padding: 0 10px;
+    position: fixed;
+    z-index: 5;
+    top: 0;
+
+    transition: top 0.3s ease-in-out;
+
+    &[data-hide] {
+        top: -3.5rem;
+    }
 }
 
 .anchor {
