--- a/src/components/Book/Book.module.scss
+++ b/src/components/Book/Book.module.scss
@@ -1,18 +1,37 @@
+@use '../../styles/variables';
+
 %bookHeroContainer {
-    width: 120px;
-    height: 180px;
+    height: 100%;
+    width: 140px;
+    height: 230px;
     grid-column: 1 / 2;
-    grid-row: 1 / 4;
+    grid-row: 1 / 3;
 }
 
 .bookHeroResolved {
     @extend %bookHeroContainer;
+    position: relative;
+    transition: filter 0.2s ease-in-out;
+
+    &:hover {
+        filter: brightness(1.15);
+    }
 
     a {
+        color: #ffffffda;
+
         img {
             width: 100%;
             height: 100%;
             object-fit: cover;
+        }
+
+        span {
+            position: absolute;
+            bottom: -60px;
+            left: 0;
+            font-size: 1.1rem;
+            font-family: variables.$font-stack-para;
         }
     }
 }
