--- a/src/components/Hero/Hero.module.scss
+++ b/src/components/Hero/Hero.module.scss
@@ -1,5 +1,6 @@
+@use '../../styles/variables';
+
 .hero {
-    border: 1px solid #000;
     position: relative;
     overflow: hidden;
 
@@ -17,6 +18,9 @@
         transform: translateY(-50%);
         z-index: 3;
         transition: background 0.3s ease-in;
+        display: flex;
+        justify-content: center;
+        align-items: center;
         cursor: pointer;
 
         &[data-dir="left"] { left: 10px; }
@@ -55,7 +59,7 @@
         display: flex;
         position: relative;
         transition: transform 0.3s ease;
-        height: 300px;
+        height: 470px;
 
         .categoryHighlight {
             background-size: cover;
@@ -65,39 +69,29 @@
             // background-attachment: fixed;
             display: grid;
             grid-template-columns: 1fr auto;
-            align-content: center;
             // justify-items: center;
             gap: 1rem;
             min-width: 100%;
-            padding: 0 1rem;
+            padding: 6rem 3rem;
             color: #ffffffda;
 
             &[data-highlight="1"] { background-image: url("../../../images/hero-1.webp"); }
             &[data-highlight="2"] { background-image: url("../../../images/hero-2.webp"); }
             &[data-highlight="3"] { background-image: url("../../../images/hero-3.webp"); }
 
-            .bookContainer {
-                width: 120px;
-                height: 180px;
-                border: 1px solid #ffffffda;
-                grid-column: 1 / 2;
-                grid-row: 1 / 4;
-                display: flex;
-                justify-content: center;
-                align-items: center;
-
-                img {
-                    width: 100%;
-                    height: 100%;
-                    object-fit: cover;
-                }
+            h2 {
+                font-weight: lighter;
+                font-size: 1.5rem;
             }
-    
+
             button {
                 height: 2.5rem;
                 width: 8rem;
                 background: burlywood;
                 border: none;
+                grid-column: 2/3;
+                grid-row: 3/4;
+                font-family: variables.$font-stack-para;
             }
         }
     }
