--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -12,7 +12,7 @@
     display: flex;
     justify-content: left;
     align-items: center;
-    background: burlywood;
+    background: linear-gradient(rgb(161, 126, 83) 5%, rgb(235, 196, 145) 55%, rgb(241, 201, 148) 90%);
     height: 3.5rem;
     min-width: 100%;
     padding: 0 10px;
@@ -66,7 +66,7 @@
 
     button {
         color: rgb(255 255 255 / 85%);
-        background: #91724b;
+        background: rgb(145, 114, 75);
         height: 1.8rem;
         width: 1.8rem;
         border: none;
