add primary/secondary colors for background & text

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -27,3 +27,9 @@
 
 $font-stack-header: 'Merriweather', serif;
 $font-stack-para: 'Open Sans', sans-serif;
+
+$bg-color-primary: rgb(145, 114, 75);
+$bg-color-secondary: burlywood;
+
+$text-color-primary: #ffffffda;
+$text-color-secondary: #000;
