--- a/src/components/Hero/Book/Book.module.scss
+++ b/src/components/Hero/Book/Book.module.scss
@@ -6,6 +6,7 @@
     height: 230px;
     grid-column: 1 / 2;
     grid-row: 1 / 3;
+    box-shadow: 1px 1px 5px #0000009a;
 }
 
 .bookHeroResolved {
@@ -28,10 +29,10 @@
 
         span {
             position: absolute;
-            bottom: -60px;
+            top: 110%;
             left: 0;
             font-size: 1.1rem;
-            font-family: variables.$font-stack-para;
+            font-family: variables.$font-stack-header;
         }
     }
 }
