--- a/src/components/Hero/Hero.module.scss
+++ b/src/components/Hero/Hero.module.scss
@@ -41,7 +41,7 @@
         z-index: 3;
         
         button {
-            margin-right: 0.7rem;
+            margin-right: 0.5rem;
             width: 12px;
             height: 12px;
             background: none;
@@ -68,33 +68,49 @@
             background-color: rgba(0, 0, 0, 0.4);
             background-blend-mode: multiply;
             background-position: center;
-            display: grid;
-            grid-template-columns: 1fr auto;
-            // justify-items: center;
-            gap: 1rem;
             min-width: 100%;
-            padding: 6rem 3rem;
-            color: #ffffffda;
+            display: flex;
+            justify-content: center;
+            align-items: center;
 
             &[data-highlight="1"] { background-image: url("../../../images/hero-1.webp"); }
             &[data-highlight="2"] { background-image: url("../../../images/hero-2.webp"); }
             &[data-highlight="3"] { background-image: url("../../../images/hero-3.webp"); }
             &[data-highlight="4"] { background-image: url("../../../images/hero-4.webp"); }
 
-            h2 {
-                font-weight: lighter;
-                font-size: 1.5rem;
-            }
+            .wrapper {
+                display: grid;
+                grid-template-columns: 1fr auto;
+                justify-content: center;
+                gap: 1rem;
+                color: variables.$text-color-primary;
+                width: min(85vw, 500px);
 
-            button {
-                height: 2.5rem;
-                width: 8rem;
-                background: burlywood;
-                border: none;
-                grid-column: 2/3;
-                grid-row: 3/4;
-                font-family: variables.$font-stack-para;
+                button {
+                    height: 2.5rem;
+                    width: 8rem;
+                    background: burlywood;
+                    border: none;
+                    grid-column: 2/3;
+                    grid-row: 3/4;
+                    // margin-top: 4rem;
+                    font-family: variables.$font-stack-para;
+                }
             }
+        }
+    }
+}
+
+@media screen and (min-width: 480px) {
+    .categoryHighlight .wrapper {
+        justify-items: center;
+
+        h2 {
+            align-self: flex-end;
+        }
+
+        p {
+            text-align: center;
         }
     }
 }
