--- a/src/components/Hero/Book/Book.module.scss
+++ b/src/components/Hero/Book/Book.module.scss
@@ -1,7 +1,6 @@
 @use '../../../styles/variables';
 
 %bookHeroContainer {
-    height: 100%;
     width: 140px;
     height: 230px;
     grid-column: 1 / 2;
@@ -21,10 +20,31 @@
     a {
         color: #ffffffda;
 
+        &:hover img {
+            transform: rotate(-10deg);
+
+            &[data-book-bg] {
+                transform: rotate(10deg) translateY(-30px);
+            }
+        }
+
+        &:hover span {
+            left: 10px;
+        }
+
         img {
             width: 100%;
             height: 100%;
             object-fit: cover;
+            position: absolute;
+            transition: transform 0.3s ease;
+
+            &[data-book-bg] {
+                height: 90%;
+                width: 90%;
+                bottom: 0;
+                filter: brightness(0.7);
+            }
         }
 
         span {
@@ -33,6 +53,7 @@
             left: 0;
             font-size: 1.1rem;
             font-family: variables.$font-stack-header;
+            transition: left 0.3s ease;
         }
     }
 }
@@ -74,3 +95,14 @@
         bottom: -40px;
     }
 }
+
+@media screen and (min-width: 768px) {
+    %bookHeroContainer {
+        height: 250px;
+        width: 160px;
+    }
+
+    .bookHeroResolved a img[data-book-bg] {
+        right: -2rem;
+    }
+}   
