change font-family, restyle content

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,32 +1,32 @@
-/* merriweather-regular - latin */
+/* playfair-display-regular - latin */
 @font-face {
     font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
-    font-family: 'Merriweather';
+    font-family: 'Playfair Display';
     font-style: normal;
     font-weight: 400;
-    src: url('../fonts/merriweather-v30-latin-regular.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
-  }
+    src: url('../fonts/playfair-display-v37-latin-regular.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+}
 
-/* open-sans-regular - latin */
+/* signika-regular - latin */
 @font-face {
     font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
-    font-family: 'Open Sans';
+    font-family: 'Signika';
     font-style: normal;
     font-weight: 400;
-    src: url('../fonts/open-sans-v40-latin-regular.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
-  }
+    src: url('../fonts/signika-v25-latin-regular.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+}
 
-  /* open-sans-600 - latin */
-  @font-face {
+/* signika-300 - latin */
+@font-face {
     font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
-    font-family: 'Open Sans';
+    font-family: 'Signika';
     font-style: normal;
-    font-weight: 600;
-    src: url('../fonts/open-sans-v40-latin-600.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
-  }
+    font-weight: 300;
+    src: url('../fonts/signika-v25-latin-300.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+}
 
-$font-stack-header: 'Merriweather', serif;
-$font-stack-para: 'Open Sans', sans-serif;
+$font-stack-header: 'PLayfair Display', serif;
+$font-stack-para: 'Signika', sans-serif;
 
 $bg-color-primary: rgb(145, 114, 75);
 $bg-color-secondary: burlywood;
