--- a/src/components/Hero/Hero.module.scss
+++ b/src/components/Hero/Hero.module.scss
@@ -61,7 +61,7 @@
         display: flex;
         position: relative;
         transition: transform 0.3s ease;
-        height: 470px;
+        height: 520px;
 
         .categoryHighlight {
             background-size: cover;
@@ -84,7 +84,11 @@
                 justify-content: center;
                 gap: 1rem;
                 color: variables.$text-color-primary;
-                width: min(85vw, 500px);
+                width: min(85vw, 600px);
+
+                h1 {
+                    align-self: flex-end;
+                }
 
                 button {
                     height: 2.5rem;
@@ -105,12 +109,23 @@
     .categoryHighlight .wrapper {
         justify-items: center;
 
-        h2 {
-            align-self: flex-end;
-        }
-
         p {
             text-align: center;
+        }
+    }
+}
+
+@media screen and (min-width: 768px) {
+    .hero .sliderBtn {
+        &[data-dir="left"] { left: 5rem; }
+        &[data-dir="right"] { right: 5rem; }
+    }
+
+    .hero .carouselContainer .categoryHighlight .wrapper {
+        column-gap: 3.5rem;
+
+        button {
+            transform: translateY(-3rem);
         }
     }
 }
