--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -8,14 +8,19 @@
 
 h1, h2, h3, h4 {
     font-family: variables.$font-stack-header;
+    font-weight: lighter;
+}
+
+h1 {
+    font-size: 1.9rem;
 }
 
 h2 {
     font-size: 1.5rem;
-    font-weight: lighter;
 }
 
 p {
-    font-size: 14px;
+    font-size: 16px;
     font-family: variables.$font-stack-para;
+    font-weight: 300;
 }
