--- a/src/components/Trending/BooksTrending.module.scss
+++ b/src/components/Trending/BooksTrending.module.scss
@@ -6,15 +6,31 @@
     position: relative;
     height: 600px;
 
-    h2 {
-        text-align: center;
+    .sectionTitle {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: min(100vw, 1200px);
+        margin: 1rem auto;
+
+        h2 {
+            text-wrap: nowrap;
+            margin: 0 1.5rem;
+        }
+
+        span {
+            height: 2px;
+            opacity: 0.6;
+            width: 100%;
+            background: #000;
+        }
     }
 
     .container {
         position: absolute;
         top: 50%;
         left: 50%;
-        transform: translate(-50%, -50%);
+        transform: translate(-50%, -45%);
         display: flex;
         gap: 1rem;
         width: min(100vw, 1200px);
