--- a/src/components/ProductCard/AddToCartButton/AddToCartBtn.module.scss
+++ b/src/components/ProductCard/AddToCartButton/AddToCartBtn.module.scss
@@ -1,12 +1,16 @@
 @use '../../../styles/variables';
 
-.addCartBtn {
+%button {
     width: calc(100% - 1rem);
     position: absolute;
     bottom: 0.5rem;
     left: 0.5rem;
     height: 1.8rem;
     border: none;
+}
+
+.addCartBtn {
+    @extend %button;
     background: variables.$bg-color-primary;
     color: #fff;
     z-index: 1;
@@ -44,4 +48,10 @@
     z-index: -1;
     transform: scaleX(0);
     transform-origin: left;
+}
+
+.addedBtn {
+    @extend %button;
+    background: variables.$bg-color-secondary;
+    color: variables.$bg-color-primary;
 }
